--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,7 +20,12 @@
                 <li><a href="#" class="navigation-link">CONTACT</a></li>
             </ul>
         </nav>
-
+        
+                <div class="splash-inner">
+                    <h2>Welcome To Our Studio!</h2>
+                    <h1>IT'S NICE TO MEET YOU</h1>
+                    <a href="#" class="btn-header">TELL ME MORE</a>
+                </div>
     </header>
 </body>
 </html>
