--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,5 +28,34 @@
                     <a href="#" class="btn-header">TELL ME MORE</a>
                 </div>
     </header>
+    <section class="services">
+        <h3>Services</h3>
+        <p>Lorem ipsum dolor sit amet</p>
+        <div class="container">
+            <div class="row">
+                <div class="col col-4">
+                    <div class="box">
+                        <i class="fa-solid fa-basket-shopping"></i>
+                        <h4 class="box-title">E-commerce</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam tincidunt elit, mollis fermentum dui consequat lobortis. </p>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="box">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <h4 class="box-title">Responsive Web</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam tincidunt elit, mollis fermentum dui consequat lobortis. </p>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="box">
+                        <i class="fa-solid fa-lock"></i>
+                        <h4 class="box-title">Web Security</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam tincidunt elit, mollis fermentum dui consequat lobortis. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
