edit section services style

--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <h3>OUR PORTFOLIO</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam</p>
+    </section>
 </body>
 </html>
