Add section portfolio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,64 @@
     <section class="portfolio">
         <h3>OUR PORTFOLIO</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam</p>
+        <div class="container">
+            <div class="row">
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/2179865/pexels-photo-2179865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/842950/pexels-photo-842950.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/2718447/pexels-photo-2718447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/2718447/pexels-photo-2718447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem, ipsum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/2179865/pexels-photo-2179865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem, ipsum.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-4">
+                    <div class="card">
+                        <img src="https://images.pexels.com/photos/842950/pexels-photo-842950.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                        <div class="card-body">
+                            <h4>Lorem, ipsum.</h4>
+                            <p>Lorem.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
