--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <p>Lorem ipsum dolor sit amet</p>
         <div class="container">
             <div class="row">
-                <div class="col col-4">
+                <div class="col col-12 col-lg-4">
                     <div class="box">
                         <i class="fa-solid fa-basket-shopping"></i>
                         <h4 class="box-title">E-commerce</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam tincidunt elit, mollis fermentum dui consequat lobortis. </p>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-lg-4">
                     <div class="box">
                         <i class="fa-solid fa-laptop-code"></i>
                         <h4 class="box-title">Responsive Web</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam tincidunt elit, mollis fermentum dui consequat lobortis. </p>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-lg-4">
                     <div class="box">
                         <i class="fa-solid fa-lock"></i>
                         <h4 class="box-title">Web Security</h4>
@@ -62,7 +62,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam</p>
         <div class="container">
             <div class="row">
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/2179865/pexels-photo-2179865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/842950/pexels-photo-842950.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/2718447/pexels-photo-2718447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/2718447/pexels-photo-2718447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/2179865/pexels-photo-2179865.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-4">
+                <div class="col col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://images.pexels.com/photos/842950/pexels-photo-842950.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                         <div class="card-body">
@@ -119,5 +119,22 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col col-md-3 col-lg-4">
+                    <p>@copyright 2014 freebiesXpress.com</p>
+                </div>
+                <div class="col col-md-3 col-lg-4">
+                    <ul class="footer-list">
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
+                        <li><a href="#"><i class="fa-brands fa-pinterest-p"></i>Pinterest</a></li>
+                        <li><a href="#"><i class="fa-brands fa-google-plus-g"></i>Google+</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
