--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col col-md-3 col-lg-4">
+                <div class="col col-6 col-lg-4">
                     <p>@copyright 2014 freebiesXpress.com</p>
                 </div>
-                <div class="col col-md-3 col-lg-4">
+                <div class="col col-md-6 col-lg-4">
                     <ul class="footer-list">
                         <li><a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                         <li><a href="#"><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
